# devops-task

./: .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.development.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: docker.yml  main.yml  release.yml  test.yml
app/: __init__.py  config.py
app/api/: app.py  dependencies.py
app/database/: __init__.py  database.py  factory.py
app/database/sql/: __init__.py  sql_connection.py  sql_operations.py
app/modules/: __init__.py
app/modules/aircraft/: __init__.py
app/modules/airline/: __init__.py
app/modules/common/: __init__.py  exceptions.py  service.py  utils.py
app/modules/user/: __init__.py
deployment-scripts/: migrate-all.sh  migrate.sh  migration.py
docs/: 01_getting_started.md  02_code_structure.md  03_scripts.md  04_ci_cd.md  05_deployment.md
k8s/: cloudbuild.yaml  deploy.sh
k8s/app/: deployment.yaml  job.yaml  loadBalancer.yaml  up-app.sh
k8s/app/secret/: create-app-secret.sh
k8s/database/: db-values.yaml  up-db.sh
k8s/database/secret/: .env.db.test  create-db-secret.sh
k8s/secrets/: create-all-secrets.sh
k8s/secrets/app-env-secret/: .env
k8s/secrets/db-secret/: .env.db
k8s/secrets/image-registry-secret/: .env.registry.test  create.sh
scripts/: add-migration.sh  migrate-all.sh  migrate.sh  test-setup.sh  test.sh
tests/: __init__.py
tests/e2e/: __init__.py  test_main.py
tests/integration/: __init__.py
tests/integration/database/: __init__.py  test_database.py
(+63 files in other folders)
